# python-template

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
module/: __init__.py  __main__.py  logger_config.py  settings.py
scripts/: check_env.py
tests/: test_dummy.py
