[project]
name = "python-template"
version = "0.1.0"
description = "A modern Python project template with structured logging and configuration management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.10.1",
    "structlog>=25.4.0",
    "python-dotenv>=1.1.1",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # Pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
]
ignore = []

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "ruff>=0.12.3",
    "pyright>=1.1.403",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=3.7.1",
]
